--- a/days/day 01/go-after-poo/remind/vite-project/package.json
+++ b/days/day 01/go-after-poo/remind/vite-project/package.json
@@ -6,10 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
+    "@types/eslint__js": "^8.42.3",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "eslint": "^9.14.0",
     "typescript": "~5.6.2",
+    "typescript-eslint": "^8.14.0",
     "vite": "^5.4.10"
   }
 }
