feat: end of poo

--- a/days/day 01/go-after-poo/remind/vite-project/package.json
+++ b/days/day 01/go-after-poo/remind/vite-project/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "tsc": "tsc",
     "build": "tsc && vite build",
+    "build:dev": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint ."
   },
