--- a/days/day 01/jest/package.json
+++ b/days/day 01/jest/package.json
@@ -10,7 +10,8 @@
     "build:dev": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "test": "jest"
+    "test": "jest",
+    "test-w": "jest --watch"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
@@ -20,6 +21,7 @@
     "@typescript-eslint/parser": "^8.14.0",
     "eslint": "^9.14.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.14.0",
