--- a/final-project/librairies/@dtbc/lor-character/package.json
+++ b/final-project/librairies/@dtbc/lor-character/package.json
@@ -11,10 +11,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "doc": "typedoc"
   },
   "devDependencies": {
     "@types/node": "^22.10.0",
+    "typedoc": "^0.27.0",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
     "vite-plugin-dts": "^4.3.0"
