--- a/final-project/applications/lor-journey-game/package.json
+++ b/final-project/applications/lor-journey-game/package.json
@@ -6,9 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest",
+    "test-w": "jest --watch"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "~5.6.2",
     "vite": "^5.4.10"
   }
